# OpenVino-For-SmartCity

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_common.cmake  Dockerfile  README.adoc  README.md  Smart-City.ipynb  smart_city_demo.sh  smart_city_tutorial
models/FP16/: person-vehicle-bike-detection-crossroad-0078.xml
models/FP32/: person-vehicle-bike-detection-crossroad-0078.xml
scripts/: download_models.sh  list.lst  mongocxx-install.sh  setupenv.sh  startupdb.sh
scripts/p-envs/: basicPubSub.py  graph.py  mongo.py  requirements.txt
src/: CMakeLists.txt  FrameReader.h  InitRectDrawer.cpp  InitRectDrawer.h  Tracker.cpp  Tracker.h  base_detection.cpp  base_detection.hpp  car_detection.hpp  customflags.hpp  drawer.cpp  drawer.hpp  main.cpp  object_detection.cpp  object_detection.hpp  yolo_detection.cpp  yolo_detection.hpp  yolo_labels.cpp  yolo_labels.hpp
